--- a/ChatApp/Server/appsettings.json
+++ b/ChatApp/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ChatApp.Server-84d1d987-ead8-4651-b0cf-e1deea919864;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=mydatabase.db"
   },
   "Logging": {
     "LogLevel": {
