refactor: Extract the signalR connection to a specific interface

--- a/ChatApp.Test/ChatApp.Test.csproj
+++ b/ChatApp.Test/ChatApp.Test.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bunit" Version="1.22.19" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.10" />
